# karazhan

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
.karazhan/: config.example.toml  karazhan.log.2026-06-19  karazhan.log.2026-06-22  state.toml
.karazhan/prompts/: testing.md
prompts/: hello.md  test.md
src/: app.rs  client.rs  commands.rs  config.rs  daemon.rs  ipc.rs  main.rs  pr_status_store.rs  project_config.rs  projects.rs  watcher.rs  watcher_proc.rs
src/agent/: claude_code.rs  configured.rs  mock.rs  mod.rs  session.rs
src/github/: ci.rs  commands.rs  mod.rs  pr.rs  pr_status.rs
src/prompts/: mod.rs  model.rs  store.rs
src/ui/: detail.rs  grid.rs  help.rs  keymap.rs  library.rs  mod.rs  palette.rs
src/worktree/: manager.rs  mod.rs  model.rs  state.rs
