[package]
name = "karazhan"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.2"
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-util", "net", "signal"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
async-trait = "0.1"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
futures = "0.3"
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
nix = { version = "0.29", features = ["process", "signal", "fs"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
